# rollkit

./: .gitignore  .golangci.yml  .goreleaser.yaml  .markdownlint.yaml  .mockery.yaml  CHANGELOG-PENDING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.da  LICENSE  Makefile  NOTICE  README.md  RELEASE.md  TODO.md  block-refactor-plan.md  buf.gen.yaml  buf.yaml  build-image.sh  codecov.yml  go.mod  go.sum  go.work.example  print.html  rollkit.toml  searchindex.js  searchindex.json  testout.txt  testout2.txt
.github/: CODEOWNERS  auto_request_review.yml  dependabot.yml  mergify.yml  pull_request_template.md
aggregation/: aggregation.go  centralized.go  centralized_test.go  mock.go
apps/: doc.go
attester/: Makefile  go.mod  go.sum
block/: aggregation.go  aggregation_test.go  alerts.go  async_store.go  batch.go  batch_queue_test.go  batch_retrieval.go  batch_test.go  block-manager.md  block.go  block.md  block_cache.go  block_cache_test.go  block_exchange.go  block_processing.go  block_publishing.go  block_sync.go  block_syncing.go  block_test.go  cache.go  cache_test.go  channel_manager.go  channels.go  channels_test.go  constants.go  da.go  daIncluder.go  daIncluder_test.go  da_includer.go  da_includer_test.go  da_speed_test.go  data_cache.go  errors.go  events.go  header-and-data-separation-adr.md  header-sync.md  header_cache.go  header_data_store.go  header_exchange.go  header_sync.go  (+49 more)
block.copy/: batch.go  batch_test.go  block-manager.md  data_cache.go  header_cache.go  manager.go  producer.go  publisher.go  state_manager.go  syncer.go  syncer_status.go
client/: README.md
client/crates/client/: Cargo.toml  README.md
client/crates/client/examples/: basic.rs
client/crates/client/src/: client.rs  error.rs  health.rs  lib.rs  p2p.rs  signer.rs  store.rs
client/crates/client/tests/: integration_test.rs
client/crates/rollkit-client/: Cargo.toml  README.md
client/crates/rollkit-client/examples/: basic.rs
client/crates/rollkit-client/src/: client.rs  error.rs  health.rs  lib.rs  p2p.rs  signer.rs  store.rs
client/crates/rollkit-client/tests/: integration_test.rs
client/crates/rollkit-types/: Cargo.toml  README.md  build.rs
client/crates/rollkit-types/src/: lib.rs
client/crates/rollkit-types/src/proto/: rollkit.v1.rs  rollkit.v1.services.rs
client/crates/rollkit-types/tests/: feature_test.rs
client/crates/types/: .gitattributes  Cargo.toml  README.md  build.rs
client/crates/types/src/: lib.rs
client/crates/types/src/proto/: evnode.v1.messages.rs  evnode.v1.rs  evnode.v1.services.rs  rollkit.v1.messages.rs  rollkit.v1.services.rs
client/crates/types/tests/: feature_test.rs
cmd/: README  README.md  docs_gen.go  init.go  run_node_test.go
config/: addr.go  addr_test.go  cli.go  config.go  config_test.go  consensus.go  defaults.go  flags.go  genesis.go  helper.go  helper_test.go  instrumentation.go  instrumentation_test.go  metrics.go  p2p.go  priv_validator_key.json  rpc.go  toml.go  toml_test.go  yaml.go  yaml_test.go
conv/: addr.go  addr_test.go  config.go  config_test.go  crypto.go  crypto_test.go  errors.go
core/: README.md  doc.go  go.mod  go.sum
da/: Dockerfile  Makefile  NOTICE  client.go  da.go  da.md  da_test.go  errors.go  go.mod  go.sum  interface.go  lazyledger.go
docker/: mockserv.Dockerfile
docs/: README.md  book.toml  template.md
events/: bus.go
execution/: execute.go
fork_choice/: first_ordered_pure.go  rule.go  rules.go
gas-calculator/: README.md  package-lock.json  package.json  vite.config.js
hash/: hashing.go
lcn/: config.go  constants.go  lcn.go  settlement.go
log/: logger.go
mempool/: cache.go  clist_mempool.go  clist_mempool_test.go  doc.go  errors.go  ids.go  mempool.go  mempool.md  metrics.go  reactor.go  reaper.go  tx.go
mocks/: Application.go  BlockStore.go
namespace/: consts.go
node/: aggregator.go  aggregator_test.go  block_exchange.go  crypto.go  crypto_test.go  exchange.go  execution_test.go  full.go  full_node.go  (+30 more)
(+1130 files in other folders)
