[package]
name = "rollkit-types"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
walkdir = { workspace = true }

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
