[package]
name = "rollkit-types"
version = "0.0.1"
edition = "2021"
authors = ["Rollkit Contributors"]
description = "Protocol buffer generated types for Rollkit"
documentation = "https://docs.rs/rollkit-types"
homepage = "https://rollkit.dev"
repository = "https://github.com/rollkit/rollkit"
license = "Apache-2.0"
keywords = ["rollkit", "blockchain", "protobuf", "grpc"]
categories = ["api-bindings", "encoding"]

[features]
default = ["grpc"]
grpc = ["tonic", "transport"]
transport = ["tonic/transport"]

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
walkdir = { workspace = true }

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true, optional = true, features = ["transport"] }
